crates/kirin-chumsky-format/src/snapshots/kirin_chumsky_format__format__tests__format_parser_basic.snap
---
source: crates/kirin-chumsky-format/src/format.rs
expression: format
---
Format {
    elements: [
        Token(
            [
                Identifier(
                    "load",
                ),
                Identifier(
                    "something",
                ),
            ],
        ),
        Field(
            "value",
            Type,
        ),
        Token(
            [
                Identifier(
                    "from",
                ),
            ],
        ),
        Field(
            "address",
            Default,
        ),
    ],
    fields: {
        "value": 0,
        "address": 1,
    },
}
