crates/kirin-chumsky-format/src/snapshots/kirin_chumsky_format__format__tests__format_parser_escaped_lbrace.snap
---
source: crates/kirin-chumsky-format/src/format.rs
assertion_line: 225
expression: format
---
Format {
    elements: [
        Token(
            [
                Identifier(
                    "dict",
                ),
            ],
        ),
        Token(
            [
                EscapedLBrace,
            ],
        ),
        Field(
            "key",
            Default,
        ),
        Token(
            [
                EscapedRBrace,
            ],
        ),
        Token(
            [
                Equal,
            ],
        ),
        Field(
            "value",
            Default,
        ),
    ],
    fields: {
        "key": 0,
        "value": 1,
    },
}
